fixed side-nav sizing and text overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -27,7 +27,7 @@ body.sticky-footer .content-wrapper {
   border-left-style: solid;
   border-left-color: #1f2223;
   border-width: thin;
-  color: #ffffff;
+  color: #99aab5;
 }
 
 body.fixed-nav {
